# rust-key-paths

./: .gitignore  1cd  Cargo.toml  EXAMPLES_TEST_RESULTS.md  OPTIMIZATION_SUMMARY.md  README.md
benches/: BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY.md  PERFORMANCE_ANALYSIS.md  README.md  akp_cpu_bench.rs  deep_chain_async_only.rs  deep_chain_leaf.rs  deep_chain_sync_only.rs  keypath_vs_unwrap.rs  kp_plain_only.rs  run_benchmarks.sh  scale_par_bench.rs  ten_level_arc_rwlock.rs  ten_level_std_rwlock.rs  ten_level_tokio_rwlock.rs
examples/: adaptive_pool_example.rs  advanced_query_builder.rs  akp_wgpu_runner.rs  all_containers_test.rs  arc_rwlock_aggregator_example.rs  arc_sync_derive_example.rs  attribute_scopes.rs  basics.rs  basics_casepath.rs  basics_macros.rs  box_and_pin_example.rs  box_keypath.rs  builder_pattern.rs  change_tracker.rs  chunk_size_example.rs  complete_containers_no_clone_example.rs  compose_macros.rs  comprehensive_test_suite.rs  container_adapters.rs  deadlock_prevention_async.rs  deadlock_prevention_sync.rs  derive_macros_new_features_example.rs  drop_test.rs  enum_keypath_macros.rs  failable_macros.rs  failable_writable_macros.rs  form_binding.rs  hashmap_keypath.rs  iters_macros.rs  key_paths_iter_derive.rs  key_paths_iter_par_derive.rs  keypath_field_consumer_tool.rs  kp_derive_showcase.rs  kp_gpu_example.rs  kp_gpu_practical_app.rs  kp_gpu_vec_example.rs  kp_pkp_wgpu.rs  kp_zip_example.rs  memory_optimized_example.rs  nested_with_options.rs  (+24 more)
key-paths-core/: Cargo.toml
key-paths-core/src/: lib.rs
key-paths-derive/: Cargo.toml  README.md
key-paths-derive/src/: lib.rs
key-paths-derive/tests/: comprehensive_test.rs  derive_test.rs  enum_complex_test.rs  integration_test.rs  pin_project_test.rs  smart_pointer_deref_test.rs  wrapper_types_test.rs
key-paths-iter/: Cargo.toml  README.md  skills.md
key-paths-iter/shaders/: hvm_reduce.wgsl
key-paths-iter/src/: kp_gpu.rs  lib.rs  query_par.rs  rayon_optimizations.rs  scale_par.rs  wgpu.rs
key-paths-macros/: Cargo.toml  README.md
key-paths-macros/src/: lib.rs
key-paths-macros/tests/: integration_test.rs
src/: async_lock.rs  kptrait.rs  lib.rs  lock.rs  pin.rs  prelude.rs
tests/: async_lock_kp_basic.rs  hof_trait.rs  integration_async_lock.rs  integration_nine_nesting.rs  integration_pin_future.rs  lock_kp_basic.rs  manual_kp_concretetype.rs  pin_kp_basic.rs  three_level_size_basic_containers.rs
