[package]
name = "rust-key-paths"
version = "1.10.0"
edition = "2024"
authors = ["Codefonsi <info@codefonsi.com>"]
license = "MPL-2.0"
description = "Keypaths, ReadableKeyPath, WritableKeyPath and EnumKeypath for struct and enums in Rust."
repository = "https://github.com/codefonsi/rust-key-paths"
homepage = "https://github.com/codefonsi/rust-key-paths"
documentation = "https://docs.rs/rust-key-paths"
keywords = ["keypaths", "EnumKeyPath", "type-safe", "WritableKeyPath", "ReadableKeyPath"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "../../README.md", "LICENSE"]

[dependencies]
key-paths-core = { path = "key-paths-core", version = "1.7.0", features = ["tagged_core"] }
key-paths-derive = { path = "key-paths-derive", version = "1.1.0"}


[workspace]
resolver = "3" # or "3"
members = [
    "key-paths-core",
    "key-paths-derive"
, "key-paths-macros"]

[patch.crates-io]
key-paths-core = { path = "key-paths-core" }
key-paths-derive = { path = "key-paths-derive" }

[features]
default = []
parking_lot = ["key-paths-core/parking_lot"]
tagged_core = ["key-paths-core/tagged_core"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
tagged-core = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "keypath_vs_unwrap"
harness = false
