[package]
name = "key-paths-derive"
version = "2.0.7"
edition = "2024"
description = "Proc-macro derive to generate keypath methods"
license = "MPL-2.0"
authors = ["Codefonsi <info@codefonsi.com>"]
repository = "https://github.com/codefonsi/key-paths-derive"
homepage = "https://github.com/codefonsi/rust-key-paths"
documentation = "https://docs.rs/key-paths-derive"
keywords = ["keypaths", "EnumKeyPath", "type-safe", "macros", "proc"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }


[dev-dependencies]
async-trait = "0.1"
rust-key-paths = { path = "../", version = "2.0.7", features = ["tokio", "parking_lot", "pin_project"] }
tokio = { version = "1.38", features = ["sync", "rt", "macros"] }
parking_lot = "0.12"
pin-project = "1.1"