[package]
name = "key-paths-macros"
version = "1.0.9"
edition = "2024"
description = "Proc-macro derive to generate keypath methods"
license = "MPL-2.0"
authors = ["Codefonsi <info@codefonsi.com>"]
repository = "https://github.com/codefonsi/key-paths-macros"
homepage = "https://github.com/codefonsi/rust-key-paths"
documentation = "https://docs.rs/key-paths-macros"
keywords = ["keypaths", "EnumKeyPath", "type-safe", "macros", "proc"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "../../README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
key-paths-core = { path = "../key-paths-core", version = "1.7.0" }
key-paths-derive = "1.1.0"